Ported to Puppeteer

--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "dr-css-inliner",
-  "version": "0.6.0",
-  "description": "PhantomJS script to inline above-the-fold CSS for a webpage.",
+  "name": "dr-css-inliner-puppeteer",
+  "version": "0.7.0",
+  "description": "Puppeteer script to inline above-the-fold CSS for a webpage.",
   "main": "index.js",
+  "dependencies": {
+    "puppeteer": "^2.0.0"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/drdk/dr-css-inliner.git"
+    "url": "https://github.com/MichaelHeerklotz/dr-css-inliner.git"
   },
   "keywords": [
-    "phantomjs",
+    "puppeteer",
     "above-the-fold",
     "css"
   ],
-  "author": "rasmusfl0e",
+  "author": "MichaelHeerklotz",
   "license": "BSD-2-Clause",
   "bugs": {
-    "url": "https://github.com/drdk/dr-css-inliner/issues"
+    "url": "https://github.com/MichaelHeerklotz/dr-css-inliner/issues"
   }
 }
